--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,7 +20,7 @@
 //layout
 @import "layout/header";
 @import "layout/footer";
-@import "layout/login";
+@import "layout/_login_light_box";
 
 //page
 @import "page/animal";
