--- a/src/assets/scss/page/login.scss
+++ b/src/assets/scss/page/login.scss
@@ -57,25 +57,47 @@ section.loginPage {
     .acc {
       display: flex;
       align-items: center;
+      width: 50%;
       img {
-        width: 22px;
-        height: 22px;
+        width: 25px;
+        height: 25px;
+        margin: 0 5px;
+      }
+      input {
+        height: 25px;
+        width: 100%;
+        background-color: $inputColor;
+        &::placeholder {
+          padding: 5px;
+          color: $inputTextColor;
+        }
       }
     }
     .psw {
       display: flex;
       align-items: center;
+      width: 50%;
       img {
-        width: 22px;
-        height: 22px;
+        width: 25px;
+        height: 25px;
+        margin: 0 5px;
+      }
+      input {
+        height: 25px;
+        width: 100%;
+        background-color: $inputColor;
+        &::placeholder {
+          padding: 5px;
+          color: $inputTextColor;
+        }
       }
     }
     .defaultBtn {
       position: relative;
       border: 2px solid #000;
       box-shadow: 2px 2px 0 #000;
-      width: 100px;
-      height: 30px;
+      width: 10vw;
+      height: 2.5vw;
       &:hover {
         background-color: $primaryColorYellow;
       }
