--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -1,7 +1,8 @@
 .pk_map{
     .pk_map_bg{
+        width: 100%;
+        height: 920px;
         background-image: url("/assets/images/park/pk_map_bg.png");
-        
     }
 }
 .pk_Tickets{}
