--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -1,10 +1,18 @@
-.pk_map{
-    .pk_map_bg{
+.pk_content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .pk_map{
         width: 100%;
         height: 920px;
-        background-image: url("/assets/images/park/pk_map_bg.png");
+        position: relative;
+        img{
+            width: 100%;
+            vertical-align: middle;
+        }
     }
+    .pk_Tickets{}
+    .pk_origin{}
+    .pk_Park_information{}
 }
-.pk_Tickets{}
-.pk_origin{}
-.pk_Park_information{}
