--- a/src/assets/scss/page/login.scss
+++ b/src/assets/scss/page/login.scss
@@ -1,11 +1,15 @@
 section.loginPage {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 48vw;
   display: flex;
   background-color: $bgColorLightgray;
   justify-content: center;
   align-items: center;
+  .active {
+    color: $primaryColorGreen;
+    background-color: $bgColorSecGray;
+  }
   .forgetPsw {
     position: absolute;
     bottom: 0;
@@ -26,10 +30,10 @@ section.loginPage {
   }
   .cloud {
     position: absolute;
-    width: 200px;
-    height: 200px;
-    top: -50px;
-    left: 0;
+    width: 250px;
+    height: 250px;
+    top: 0;
+    left: 5px;
     img {
       width: 100%;
       height: 100%;
@@ -37,76 +41,110 @@ section.loginPage {
   }
   .cloudSun {
     position: absolute;
-    width: 200px;
-    height: 200px;
-    top: -50px;
-    right: 0;
+    width: 250px;
+    height: 250px;
+    top: 0;
+    right: 5px;
     img {
       width: 100%;
       height: 100%;
     }
   }
   .login {
+    background-color: $bgColorSecGray;
     border: 3px solid #000;
     width: 50%;
-    height: 50%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    .acc {
+    .loginBtnGroup {
+      width: 100%;
+      height: 20%;
       display: flex;
-      align-items: center;
-      width: 50%;
-      img {
-        width: 25px;
-        height: 25px;
-        margin: 0 5px;
+      .loginBtn {
+        flex: 1;
+        border: transparent;
       }
-      input {
-        height: 25px;
-        width: 100%;
-        background-color: $inputColor;
-        &::placeholder {
-          padding: 5px;
-          color: $inputTextColor;
-        }
+      .signupBtn {
+        background-color: $bgColorLightgray;
+        flex: 1;
+        border-top: transparent;
+        border-right: transparent;
       }
     }
-    .psw {
+    .loginInputGroup {
+      height: 80%;
+      width: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      width: 50%;
-      img {
-        width: 25px;
-        height: 25px;
-        margin: 0 5px;
-      }
-      input {
-        height: 25px;
-        width: 100%;
-        background-color: $inputColor;
-        &::placeholder {
-          padding: 5px;
-          color: $inputTextColor;
+      justify-content: space-evenly;
+      .acc {
+        display: flex;
+        align-items: center;
+        width: 50%;
+        .img {
+          width: 25px;
+          height: 25px;
+          margin: 0 5px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        input {
+          height: 25px;
+          width: 100%;
+          background-color: $inputColor;
+          &::placeholder {
+            padding: 5px;
+            color: $inputTextColor;
+          }
         }
       }
-    }
-    .defaultBtn {
-      position: relative;
-      border: 2px solid #000;
-      box-shadow: 2px 2px 0 #000;
-      width: 10vw;
-      height: 2.5vw;
-      &:hover {
-        background-color: $primaryColorYellow;
+      .psw {
+        display: flex;
+        align-items: center;
+        width: 50%;
+        .img {
+          width: 25px;
+          height: 25px;
+          margin: 0 5px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        input {
+          height: 25px;
+          width: 100%;
+          background-color: $inputColor;
+          &::placeholder {
+            padding: 5px;
+            color: $inputTextColor;
+          }
+        }
       }
-      img {
-        position: absolute;
-        width: 8px;
-        height: 8px;
-        bottom: 3px;
-        right: 3px;
+      .defaultBtn {
+        position: relative;
+        border: 2px solid #000;
+        box-shadow: 2px 2px 0 #000;
+        width: 10vw;
+        height: 2.5vw;
+        cursor: pointer;
+        &:hover {
+          background-color: $primaryColorYellow;
+        }
+        img {
+          position: absolute;
+          width: 8px;
+          height: 8px;
+          bottom: 3px;
+          right: 3px;
+        }
       }
     }
   }
