--- a/src/assets/scss/page/login.scss
+++ b/src/assets/scss/page/login.scss
@@ -148,4 +148,29 @@ section.loginPage {
       }
     }
   }
+  .signup {
+    background-color: $bgColorSecGray;
+    border: 3px solid #000;
+    width: 50%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    .loginBtnGroup {
+      width: 100%;
+      height: 20%;
+      display: flex;
+      .loginBtn {
+        flex: 1;
+        border: transparent;
+      }
+      .signupBtn {
+        background-color: $bgColorLightgray;
+        flex: 1;
+        border-top: transparent;
+        border-right: transparent;
+      }
+    }
+  }
 }
