--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,15 +1,10 @@
 header {
-  z-index: 999;
-  position: fixed;
-  width: 100%;
-  box-sizing: border-box;
-
-  nav {
-    background-color: #a67751;
-    border-bottom: 3px #d0ae93 solid;
+    z-index: 999;
+    position: fixed;
     width: 100%;
+    height: 45px;
     box-sizing: border-box;
-    background-color: $bgColorLightgray;
+    background-color: #f5efeb;
 
     nav{
         background-color: #A67751;
@@ -21,7 +16,53 @@ header {
         display: flex;
         justify-content: center;
         align-items: flex-end;
+
+        &::before{
+            content: "";
+            position: absolute;
+            height: 0.5px;
+            width: 100%;
+            background-color: #9A6234;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            box-shadow: 0px -13.5px 0px #9A6234,
+                        0px -9px 0px #9A6234, 
+                        0px -4.5px 0px #9A6234,
+                        0px 4.5px 0px #9A6234,
+                        0px 9px 0px #9A6234, 
+                        0px 13.5px 0px #9A6234;
+        }
+
+        &::after{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+
+            // width: 92.1%;
+            height: 0;
+            border-bottom: 35px solid #ff730000;
+            border-right: 50px solid #f5efeb;
+
+            border-bottom: 35px solid #ff730000;
+            border-left: 50px solid #f5efeb;
+        }
+
+        // &::after{
+        //     content: "";
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     width: 0;
+        //     height: 0;
+        //     border-bottom: 35px solid #ff730000;
+        //     border-left: 50px solid #f5efeb;
+        // }
     }
+
+    
 
     ul{
         display: flex;
@@ -35,7 +76,7 @@ header {
 
     a{
         text-decoration: none;
-        font-size: $pcFontH4;
+        // font-size: $pcFontH4;
         color: $bgColorWhite;
         // position: relative;
     }
@@ -55,23 +96,22 @@ header {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
-        margin-top: 10px;
-    }
-    
-    .logo img{
-        width: 105px;
-        // height: 48px;
-        vertical-align: bottom;
+
+        img{
+            width: 105px;
+            // height: 48px;
+            vertical-align: bottom;
+        }
     }
 
     .login{
         position: absolute;
         right: -50px;
         padding-bottom: 4px;
+
+        img{
+            width: 14px;
+        }
     }
 
-    .login img{
-        width: 14px;
-    }
-}
 }
