style.scss import "layout/debug";

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/_login_light_box";
+@import "layout/debug";
 
 //page
 @import "page/animal";
