--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,10 +1,11 @@
 header {
     z-index: 999;
     position: fixed;
+    top: 0;
     width: 100%;
-    height: 45px;
+    height: 40px;
     box-sizing: border-box;
-    background-color: #f5efeb;
+    background-color: $bgColorLightgray;
 
     nav{
         background-color: #A67751;
@@ -34,33 +35,21 @@ header {
                         0px 9px 0px #9A6234, 
                         0px 13.5px 0px #9A6234;
         }
+    }
 
-        // &::after{
-        //     content: "";
-        //     position: absolute;
-        //     top: 0;
-        //     // left: 0;
-        //     right: 0;
+    
+    .arrowleft{
+        position: absolute;
+        left: 0;
+        border-bottom: 35px solid #ff730000;
+        border-left: 50px solid $bgColorLightgray;
+    }
 
-        //     // width: 92.1%;
-        //     height: 0;
-        //     border-bottom: 35px solid #ff730000;
-        //     border-right: 50px solid #f5efeb;
-
-        //     border-bottom: 35px solid #ff730000;
-        //     border-left: 50px solid #f5efeb;
-        // }
-
-        // &::after{
-        //     content: "";
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 0;
-        //     height: 0;
-        //     border-bottom: 35px solid #ff730000;
-        //     border-left: 50px solid #f5efeb;
-        // }
+    .arrowright{
+        position: absolute;
+        right: 0;
+        border-bottom: 35px solid #ff730000;
+        border-right: 50px solid $bgColorLightgray;
     }
 
     
@@ -73,6 +62,7 @@ header {
         position: relative;
         // padding-bottom: 7px;
         // margin-left: 6.5%;
+
     }
 
     a{
@@ -88,7 +78,7 @@ header {
 
     .logo{   
         width: 180px;
-        height: 45px;
+        height: 42px;
         display: flex;
         align-items: center;
         justify-content: center;
