--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -22,6 +22,7 @@ $phFontH5: clamp(0.9rem, 1vw, 1rem);
 .pcBigTitle {
   font-size: $pcFontH2;
   font-family: $font;
+  font-weight: 500;
 }
 
 //小標
