--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -52,7 +52,34 @@ header {
         border-right: 50px solid $bgColorLightgray;
     }
 
-    
+    .arrowtopleft{
+        position: absolute;
+        top: -10px;
+        left: 50px;
+        display: flex;
+    }
+
+    .arrowtopright{
+        position: absolute;
+        top: -10px;
+        right: 50px;
+        display: flex;
+        
+    }
+
+    .arrowtopr{
+        border-bottom: 10px solid #A67751;
+        border-right: 2px solid #a6775100;
+        border-left: 2px solid #a6775100;
+        margin-left: 12vw;
+    }
+
+    .arrowtopl{
+        border-bottom: 10px solid #A67751;
+        border-right: 2px solid #a6775100;
+        border-left: 2px solid #a6775100;
+        margin-right: 12vw;
+    }
 
     ul{
         display: flex;
