--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Noto+Sans+TC:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Noto+Sans+TC:wght@400;500;700;900&family=Press+Start+2P&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 //專題字體
@@ -22,23 +22,26 @@ $phFontH5: clamp(0.9rem, 1vw, 1rem);
 .pcBigTitle {
   font-size: $pcFontH2;
   font-family: $font;
-  font-weight: 500;
+  font-weight: 900;
 }
 
 //小標
 .pcSmTitle {
   font-size: $pcFontH3;
   font-family: $font;
+  font-weight: 700;
 }
 //內文
 .pcInnerText {
   font-size: $pcFontH4;
   font-family: $font;
+  font-weight: 500;
 }
 //註解
 .pcMarkText {
   font-size: $pcFontH5;
   font-family: $font;
+  font-weight: 500;
 }
 
 //----手機文字----
@@ -47,22 +50,26 @@ $phFontH5: clamp(0.9rem, 1vw, 1rem);
 .phBigTitle {
   font-size: $phFontH2;
   font-family: $font;
+  font-weight: 900;
 }
 
 //小標
 .phSmTitle {
   font-size: $phFontH3;
   font-family: $font;
+  font-weight: 700;
 }
 //內文
 .phInnerText {
   font-size: $phFontH4;
   font-family: $font;
+  font-weight: 500;
 }
 //註解
 .phMarkText {
   font-size: $phFontH5;
   font-family: $font;
+  font-weight: 500;
 }
 
 //--------------裝飾文字--------------
@@ -71,22 +78,26 @@ $phFontH5: clamp(0.9rem, 1vw, 1rem);
 .pcDecBigTitle {
   font-size: $pcFontH2;
   font-family: $decorateFont;
+  font-weight: 900;
 }
 
 //小標
 .pcDecSmTitle {
   font-size: $pcFontH3;
   font-family: $decorateFont;
+  font-weight: 700;
 }
 //內文
 .pcDecInnerText {
   font-size: $pcFontH4;
   font-family: $decorateFont;
+  font-weight: 500;
 }
 //註解
 .pcDecMarkText {
   font-size: $pcFontH5;
   font-family: $decorateFont;
+  font-weight: 500;
 }
 
 //----手機裝飾文字----
@@ -95,20 +106,24 @@ $phFontH5: clamp(0.9rem, 1vw, 1rem);
 .phDecBigTitle {
   font-size: $phFontH2;
   font-family: $decorateFont;
+  font-weight: 900;
 }
 
 //小標
 .phDecSmTitle {
   font-size: $phFontH3;
   font-family: $decorateFont;
+  font-weight: 700;
 }
 //內文
 .phDecInnerText {
   font-size: $phFontH4;
   font-family: $decorateFont;
+  font-weight: 500;
 }
 //註解
 .phDecMarkText {
   font-size: $phFontH5;
   font-family: $decorateFont;
+  font-weight: 500;
 }
