--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -12,12 +12,86 @@
             vertical-align: middle;
         }
         .pk_animal_default{
-            width: 70px;
-            height: 70px;
+            position: absolute;
+            top: 0;
+            width: 60px;
+            height: 60px;
             img{
                 width: 100%;
             }
         }
+        .pk_animal_icon1{
+            top: 170px;
+            left: 430px;
+        }
+        .pk_animal_icon2{
+            top: 150px;
+            left: 530px;
+        }
+        .pk_animal_icon3{
+            top: 180px;
+            left: 620px;
+        }
+        .pk_animal_icon4{
+            top: 200px;
+            left: 750px;
+        }
+        .pk_animal_icon5{
+            top: 330px;
+            left: 760px;
+        }
+        .pk_animal_icon6{
+            top: 280px;
+            left: 680px;
+        }
+        .pk_animal_icon7{
+            top: 260px;
+            left: 520px;
+        }
+        .pk_animal_icon8{
+            top: 260px;
+            left: 410px;
+        }
+        .pk_animal_icon9{
+            top: 200px;
+            right: 800px;
+        }
+        .pk_animal_icon10{
+            top: 140px;
+            right: 750px;
+        }
+        .pk_animal_icon11{
+            top: 230px;
+            right: 680px;
+        }
+        .pk_animal_icon12{
+            top: 200px;
+            right: 580px;
+        }
+        .pk_animal_icon13{
+            top: 160px;
+            right: 480px;
+        }
+        .pk_animal_icon14{
+            top: 280px;
+            right: 560px;
+        }
+        .pk_animal_icon15{
+            top: 300px;
+            right: 690px;
+        }
+        .pk_animal_icon16{
+            top: 310px;
+            right: 780px;
+        }
+        .pk_animal_icon17{
+            
+        }
+        .pk_animal_icon3{}
+        .pk_animal_icon3{}
+        .pk_animal_icon3{}
+        .pk_animal_icon3{}
+        .pk_animal_icon3{}
 
     }
     .pk_Tickets{}
