add footer fixed ico

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,6 +20,7 @@
 //layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/fixed_vote";
 @import "layout/_login_light_box";
 @import "layout/debug";
 
