--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -6,47 +6,59 @@
     line-height: 1.5;
     padding-bottom: 30px;
     text-align: justify;
+    min-height: 820px;
 
     img{
         vertical-align: bottom;
         outline: 1px solid red;
     }
-
     h2{
         font-size: $pcFontH3;
         color: $primaryColorGreen;
+        font-weight: 700;
     }
     p, li, button{
         font-size: $pcFontH4;
+        font-weight: 500;
+    }
+    span{
+        font-size: $pcFontH5;
+        color: $inputHintColor;
+        font-weight: 500;
     }
 
-    .tickStep, main{
+    >article, >main{
         width: 74%;
     }
+    div{
+        display: flex;
+    }
     main{
+        display: flex;
         margin: 0 auto;
         justify-content: space-between;
     }
     hgroup{
         width: 100%;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
         display: flex;
         justify-content: space-between;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
         border-bottom: 2px solid #3f3f3f;
         // background-image: linear-gradient(to right, rgba(245, 239, 235, 0) 100%);
         img{
             width: 40px;
         }
     }
-    .tickJCSB{
-        justify-content: space-between;
+    .mixedFont>p{
+        display: inline-block;
+    }
+    .important{
+        color: $secColorblue;
     }
 }
-.tick main, .tick div{
-    display: flex;
-}
 .tickStep{
+    width: 100%;
     margin: 44px auto 20px;
     img{
         height: 35px;
@@ -54,15 +66,10 @@
     }
 };
 .tickBtn{
-    justify-content: space-between;
-
-    button{
-        margin: 44px auto;
-    }
+    width: 100%;
+    button{ margin: 44px 0; }
     .tickLBtn{
-        margin-right: 0;
-    }
-
+        margin-right: 0;}
 }
 
 
@@ -82,15 +89,11 @@
         text-align: center;
         margin: 44px auto;
     }
-    li{
-        color: $bgColorWhite;
-    }
     ol{
         list-style-type: decimal;
     }
-    ul{
-        list-style-type: disc;
-    }
+    li{ color: $bgColorWhite; }
+    ul{ list-style-type: disc; }
 }
 .tickBgc{
     position: absolute;
@@ -110,6 +113,7 @@
         // translate: 0 783px;
     }
 }
+
 // part1 日曆(TickCalendar.vue)
 .tickCalendar{
     width: 40%;
@@ -118,8 +122,6 @@
         width: 100%;
     }
 }
-
-
 @media screen and (max-width: 1835px){
     .tickBgc{
         translate: 22.5% 145px;
@@ -161,5 +163,125 @@
     }
 }
 
+// part2 選擇數量
+.tickNum{
+    width: 100%;
+    >div{
+        gap: 20px;
+    }
+    .tickOptionPC{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        max-width: 100%; /* 父層的最大寬度為100% */
+        max-height: 80vh; /* 父層的最大高度為100視窗高度 */
+        input{
+            width: 100%;
+        }
+        img{
+            width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+    }
+}
+.price{
+    gap: 20px;
+    margin-top: 20px;
+    justify-content: end;
+    align-items: flex-end;
+    text-align: right;
 
 
+    span{ color: $mainTextColor; }
+    :nth-child(2){
+        width: 180px;
+    }
+    .mixedFont>*{
+        display: inline-block;
+        font-weight: 700;
+    }
+}
+.firstLine{
+    border-top: 2px solid #3f3f3f;
+    padding-top: 20px;
+    margin-top: 44px;
+}
+// part3 付款頁
+.tickPayway, .tickFinished{
+    margin-top: 44px;
+    width: 100%;
+    >main:not(.tickBtn){
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 44px;
+    }
+    select{
+        width: 280px;
+    }
+}
+// part3-1 確認訂單資訊
+.checkOrder{
+    >*{ align-items: flex-end; }
+        >h2{
+        margin-bottom: 44px;
+    }
+    hgroup{
+        h2{
+            color: $mainTextColor;
+            p{
+                font-weight: 700;
+            }
+        }
+        >:last-child{
+            font-weight: 700;
+        }
+    }
+    .choosed{
+        gap: 44px;
+        margin-top: 44px;
+        div{
+            align-items: flex-end;
+            gap: 20px;
+        }
+        p{
+            font-weight: 700;
+        }
+        h2, h2>span{
+            color: $mainTextColor
+        }
+        span{
+            font-weight: 500;
+        }
+    }
+}
+// part3-2 優惠券&付款方式
+.pay{
+    hgroup{
+        margin-top: 44px;
+    }
+    article>*{
+        margin-top: 20px;
+        width: 100%;
+
+        input{
+            width: 100%;
+        }
+    }
+    main{
+        gap: 20px;
+    }
+}
+
+// part4 購票完成
+.tickFinished{
+    margin-bottom: 44px;
+    >section{
+        text-align: center;
+        margin-bottom: 44px;
+
+        p{
+            color: $inputHintColor;
+            margin: 20px auto;
+        }
+    }
+}
